# agate-remote

./: AUTHORS.rst  CHANGELOG.rst  MANIFEST.in  README.rst  example.py  pyproject.toml  requirements-py2.txt  requirements-py3.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
agateremote/: __init__.py  archive.py  table_remote.py
docs/: Makefile  conf.py  index.rst
tests/: test_archive.py  test_table_remote.py
